More changes to let the osgi code compile with JDK 1.4
git-svn-id: https://svn.apache.org/repos/asf/ant/ivy/core/trunk@1055062 13f79535-47bb-0310-9956-ffa450edef68